# rotalabs-steer

./: .coverage  .gitignore  404.html  CITATION.cff  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/core/: index.html
api/datasets/: index.html
api/evaluation/: index.html
api/extraction/: index.html
api/integrations/: index.html
concepts/: index.html
docs/: concepts.md  getting-started.md  index.md  model-support.md
docs/api/: core.md  datasets.md  evaluation.md  extraction.md  integrations.md
docs/tutorials/: apply-steering.md  custom-datasets.md  extract-vector.md  langchain-integration.md
getting-started/: index.html
model-support/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/api/core/: index.html
site/api/evaluation/: index.html
site/concepts/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/tutorials/custom-datasets/: index.html
src/rotalabs_steer/: __init__.py  utils.py
src/rotalabs_steer/core/: __init__.py  configs.py  hooks.py  injection.py  vectors.py
src/rotalabs_steer/datasets/: __init__.py  assertiveness_pairs.py  base.py  conciseness_pairs.py  creativity_pairs.py  empathy_pairs.py  formality_pairs.py  hierarchy_pairs.py  humor_pairs.py  refusal_pairs.py  technical_depth_pairs.py  tool_pairs.py  uncertainty_pairs.py
src/rotalabs_steer/evaluation/: __init__.py  analysis.py  llm_judge.py  metrics.py
src/rotalabs_steer/extraction/: __init__.py  base.py  caa.py
src/rotalabs_steer/integrations/: __init__.py
src/rotalabs_steer/integrations/langchain/: __init__.py  steered_agent.py  steered_chat.py  steered_llm.py
tests/: __init__.py  conftest.py
tests/core/: test_hooks.py  test_injection.py  test_vectors.py
tests/datasets/: __init__.py
tutorials/apply-steering/: index.html
tutorials/custom-datasets/: index.html
tutorials/extract-vector/: index.html
tutorials/langchain-integration/: index.html
